<resources>
    <string name="app_name">Offers demo</string>
    <string name="action_refresh">Refresh</string>
    <string name="try_again">Try again</string>
    <string name="filter_offer_by">Sort offers by:</string>
    <string name="name">Name</string>
    <string name="cash_back">Cash Back</string>
    <string name="name_sort">Sorted by offers name.</string>
    <string name="cash_back_sort">Sorted by offers Cash Back.</string>
    <string name="item_image">Item Image</string>
    <string name="item_name">Item name</string>
    <string name="cancel">Cancel</string>
</resources>
