<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/offer_header"
    style="@style/card_view_custom_theme"
    android:layout_height="@dimen/recyclerview_padding_top"
    android:layout_margin="@dimen/zero_dp"
    app:cardBackgroundColor="@android:color/white"
    android:visibility="gone"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/zero_dp"
        android:paddingEnd="@dimen/row_item_space_horizontal">

        <TextView
            android:id="@+id/item_image"
            android:layout_width="@dimen/imageview_width_height"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/item_image"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/item_name"
            style="@style/product_name_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_cash_back"
            app:layout_constraintStart_toEndOf="@+id/item_image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/row_item_space_horizontal"
            android:text="@string/item_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_cash_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/row_item_space_horizontal"
            android:text="@string/cash_back"
            android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>